hide text before localized

--- a/main.css
+++ b/main.css
@@ -198,3 +198,7 @@ button[disabled], .button[disabled] {
 .result-link:hover {
   text-decoration: underline;
 }
+
+[data-i18n] {
+  visibility: hidden;
+}
